--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,31 @@ services:
         ipv4_address: 1.0.1.2
     restart: always
 
+  iva_admin:
+    build:
+      context: .
+      dockerfile: iva_admin.Dockerfile
+    container_name: iva_admin
+    env_file:
+      - iva_admin.env
+    volumes:
+      - ./iva_admin:/app
+    ports:
+      - "8002:8002"
+    depends_on:
+      - postgres
+    networks:
+      iva_net:
+        ipv4_address: 1.0.1.3
+    restart: always
+
   server_mon:
+    build:
+      context: .
+      dockerfile: server_mon.Dockerfile
     container_name: server_mon
     env_file:
-      - server_mon.env
-    build:
-      context: ./server_mon
-      dockerfile: server_mon.Dockerfile
+        - server_mon.env
     volumes:
       - ./server_mon:/app
     ports:
